--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "testing":"nodemon test.js"
   },
   "author": "",
   "license": "ISC",
